<resources>
    <string name="app_name">SIPCallApplication</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="tls">TLS</string>
    <string name="password">Password</string>
    <string name="sip_domain">Sip Domain</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="remote_address">Remote SIP address</string>
    <string name="customnotificationtitle">Notification</string>
    <string name="customnotificationtext">Incoming Call</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>
    <string name="sip_caller_id">8128618176@sip.linphone.org</string>
    <string name="incoming_call">Incoming Call...</string>
    <string name="sip_linphone_org">sip.linphone.org</string>
    <string name="_123456789">123456789</string>
    <string name="_8128618176">8128618176</string>
    <string name="todo">TODO</string>

</resources>