<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@string/_8128618176"
                android:autofillHints="mobile" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@string/_123456789"
                android:autofillHints="password" />

            <EditText
                android:id="@+id/domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sip_domain"
                android:inputType="text"
                android:text="@string/sip_linphone_org"
                android:autofillHints="domain" />

            <RadioGroup
                android:id="@+id/rg_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_udp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/udp" />

                <RadioButton
                    android:id="@+id/rb_tcp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tcp" />

                <RadioButton
                    android:id="@+id/rb_tls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/tls" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sip_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_calling"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/call_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <EditText
                android:id="@+id/remote_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remote_address"
                android:inputType="text"
                android:layout_margin="20dp"
                android:autofillHints="" />

            <LinearLayout
                android:id="@+id/ll_incoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/incoming_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_call_50"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/incoming_mute_mic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_mic_50"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/incoming_toggle_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_volume_off_50"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/incoming_hang_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_call_end_50"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_outgoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/outgoing_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_call_50"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/outgoing_pause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_resume_50"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/outgoing_hang_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_call_end_50"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/push_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:gravity="center"/>

    </RelativeLayout>

</layout>
