<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IncomingCallActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/call_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_user_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/svgviewer_output"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_call_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incoming_call"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ic_user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/id_sip_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sip_caller_id"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@+id/tv_call_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:backgroundTint="#CC1B1B"
                android:fontFamily="@font/poppins"
                android:text="@string/decline"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:fontFamily="@font/poppins"
                android:text="@string/answer"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>